# synth

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RESOURCES  TODO  build.sh  build_windows.bat  run_windows.bat
conf/: conf.yaml
h/: commands.h  networking.h  oscillator.h  synth.h  ui.h  utils.h  yaml.h
res/SDL2/lib/: SDL2.lib  SDL2main.lib
src/: audio.h  commands.c  main.c  main.cpp  networking.c  oscillator.c  ringbuffer.c  ringbuffer.cpp  ringbuffer.h  synth.c  ui.c  utils.c  utils.cpp  utils.h  yaml.c
src/visuals/: CMakeLists.txt
src/visuals/h/: fft.h
src/visuals/src/: fft.cpp
tcl/: editor.tcl  entry.tcl  gui.tcl  networking.tcl
toolchain/: Windows.toolchain.cmake  tools.sh
